# caris

./: .gitignore  Makefile  README.md  __init__.py  classification_utils.py  embeddings_utils.py  evaluate.py  evaluate_coco.py  fine_tune.py  improvements.md  main.py  pyproject.toml  recommendation_utils.py  requirements.txt  scraper.py  split_dataset.py  test.py  utils.py
src/caris/: __init__.py  config.py  data_io.py  embeddings.py  pipeline.py  recommendation.py  timing.py
src/caris.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/caris/classification/: __init__.py  hierarchy.py  meanings.py  subtree_search.py
src/caris/detection/: __init__.py  gemma.py  ram.py  yolo.py
src/caris/evaluation/: __init__.py  evaluate.py  evaluate_coco.py
src/caris/tools/: __init__.py  scraper.py  split_dataset.py
