[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "caris"
version = "0.1.0"
description = "CARIS - Iconclass symbol classification and recommendation from images."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "iconclass==0.28",
    "ultralytics",
    "transformers==4.49.0",
    "einops",
    "timm",
    "chromadb",
]

[project.optional-dependencies]
gemma = ["ollama"]
ram = ["torch", "pillow"]
scrape = ["requests", "beautifulsoup4", "tqdm"]
embeddings = ["ollama", "requests", "tqdm"]

[project.scripts]
caris-evaluate = "caris.evaluation.evaluate:main"
caris-evaluate-coco = "caris.evaluation.evaluate_coco:main"
caris-scrape = "caris.tools.scraper:main"
caris-split = "caris.tools.split_dataset:main"
caris-build-vectors = "caris.embeddings:main"

[tool.setuptools.packages.find]
where = ["src"]
